# -ele4205_projet_aut2022_29

./: .gitignore  CMakeLists.txt  Doxyfile.in  README.md  build.sh  configure.sh  local_deploy.sh  odroid-deploy-gdb.sh
client/: CMakeLists.txt  main.cpp
client/include/: Application.hpp
client/modules/: CMakeLists.txt
client/modules/QtGui/: CMakeLists.txt
client/modules/QtGui/include/QtGui/: ConfigWindow.hpp  Worker.hpp
client/modules/QtGui/ressources/: ele4205.ui
client/modules/QtGui/src/: ConfigWindow.cpp  Worker.cpp  main.cpp
client/modules/ZBar/: CMakeLists.txt
client/modules/ZBar/include/ZBar/: ZBar.hpp
client/modules/ZBar/src/: ZBar.cpp  main.cpp
client/src/: Application.cpp  main.cpp
cmake/: cross-compile.cmake  make-documentation.cmake  unset-opencv-variables.cmake
commun/: CMakeLists.txt
commun/Protocole/: AppMessages.h  messageBitfield.h
commun/Protocole/PacketEngine/: CMakeLists.txt  PacketEngine.cpp  PacketEngine.hpp  TypesEnum.h
commun/Resolution/: CMakeLists.txt  Resolution.cpp  Resolution.hpp
commun/TCP/Client/: CMakeLists.txt  TCPClient.cpp  TCPClient.hpp
commun/TCP/Commun/: TCPInterface.hpp  TCPtypes.h
commun/TCP/Commun/LengthFramer/: tcpLengthFramer.cpp  tcpLengthFramer.hpp
commun/TCP/Server/: CMakeLists.txt  TCPServer.cpp  TCPServer.hpp
commun/tcpLengthFramer/: CMakeLists.txt  tcpLengthFramer.cpp  tcpLengthFramer.hpp
server/: CMakeLists.txt
server/PrimeNumber/: CMakeLists.txt
server/PrimeNumber/inc/: PrimeNumber.h
server/PrimeNumber/src/: PrimeNumber.c  main.c
server/include/ele4205_project/: ServerApplication.hpp
server/libs/: CMakeLists.txt
server/libs/PrimeNumber/include/PrimeNumber/: PrimeNumber.h
server/modules/: CMakeLists.txt
server/modules/Camera/: CMakeLists.txt
server/modules/Camera/include/Camera/: Camera.hpp  GrabThread.hpp
server/modules/Camera/src/: Camera.cpp  GrabThread.cpp
server/modules/Morse/: CMakeLists.txt
server/modules/Morse/include/Morse/: Alphabet.hpp  Device.hpp  Morse.hpp  MorseAlphabet.hpp  Server.hpp
server/modules/Morse/src/: Alphabet.cpp  Device.cpp  MorseAlphabet.cpp  Server.cpp  main.cpp
server/modules/PrimeNumber/: CMakeLists.txt
server/modules/PrimeNumber/src/: PrimeNumber.cpp
server/src/: ServerApplication.cpp  main.cpp
